--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,5 @@ before_install:
   - echo "cloning hello_world2"
   - git clone --single-branch -b master https://github.com/nkalband/hello_world2.git
   
-import: ./hello_world2/common.yml
+# import: ./hello_world2/common.yml
+import: nkalband/hello_world2:common.yml
