--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ before_install:
   - git clone --single-branch -b master https://github.com/nkalband/hello_world2.git
   - ls -ltrR
   
-import: 
-  - source : hello_world2/common.yml
-# import: nkalband/hello_world2:common.yml
+# import: 
+  # - source : hello_world2/common.yml
+import: nkalband/hello_world2:common.yml
