--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,7 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-# Use a package of configuration called an orb.
 orbs:
-  node: circleci/node@4.2.0
-jobs:
-  first_hi:
-    command:
-      echo "hi"
+    hello: circleci/hello-build@0.0.5
 workflows:
-  hi:
-    jobs:
-      first_hi
+    "Hello Workflow":
+        jobs:
+          - hello/hello-build
