--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,20 @@
 version: 2.1
 orbs:
     hello: circleci/hello-build@0.0.5
+    win: circleci/windows@2.3.0
+jobs:
+  build:
+    executor: win/default
+    steps:
+      - checkout
+      - run: echo 'Hello, Windows'
+  hello:
+      - hello/hello-build    
 workflows:
     "Hello Workflow":
         jobs:
-          - hello/hello-build
+            - hello
+            - build
+
+
+
