--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,18 +6,28 @@ jobs:
   build:
     executor: win/default
     steps:
-      - checkout
-      - run: echo 'Hello, Windows' && uname -a && uname -p && free -h && du -sh .
+      command: |
+        echo 'Hello, Windows' 
+        pwd
+        systeminfo 
   hello:
     machine:
       image: ubuntu-2004:202010-01 # recommended linux image
     steps:
       - run: echo 'Hi hello/hello-build' && uname -a && uname -p && free -h && du -sh .
+  build-medium:
+    machine:
+      image: ubuntu-2004:202101-01
+    resource_class: arm.medium
+    steps:
+      - run: uname -a
+      - run: echo "Hello, Arm!"
 workflows:
     "Hello Workflow":
         jobs:
             - hello
             - build
+            - build-medium
 
 
 
